@@ -21,6 +21,8 @@ import static junit.framework.Assert.assertEquals;
 import static org.apache.pig.builtin.mock.Storage.resetData;
 import static org.apache.pig.builtin.mock.Storage.tuple;
 
+import java.io.ByteArrayInputStream;
+import java.io.InputStream;
 import java.util.List;
 
 import junit.framework.Assert;
@@ -53,7 +55,7 @@ public class TestAssert {
       pigServer.registerQuery("A = LOAD 'foo' USING mock.Storage() AS (i:int);");
       pigServer.registerQuery("ASSERT A BY i > 0;");
       pigServer.registerQuery("STORE A INTO 'bar' USING mock.Storage();");
-      
+
       pigServer.executeBatch();
 
       List<Tuple> out = data.get("bar");
@@ -62,7 +64,38 @@ public class TestAssert {
       assertEquals(tuple(2), out.get(1));
       assertEquals(tuple(3), out.get(2));
   }
-  
+
+  /**
+   * Verify that ASSERT operator works in a Pig script
+   * See PIG-3670
+   * @throws Exception
+   */
+  @Test
+  public void testInScript() throws Exception {
+      PigServer pigServer = new PigServer(ExecType.LOCAL);
+      Data data = resetData(pigServer);
+
+      data.set("foo",
+              tuple(1),
+              tuple(2),
+              tuple(3)
+              );
+
+      StringBuffer query = new StringBuffer();
+      query.append("A = LOAD 'foo' USING mock.Storage() AS (i:int);\n");
+      query.append("ASSERT A BY i > 0;\n");
+      query.append("STORE A INTO 'bar' USING mock.Storage();");
+
+      InputStream is = new ByteArrayInputStream(query.toString().getBytes());
+      pigServer.registerScript(is);
+
+      List<Tuple> out = data.get("bar");
+      assertEquals(3, out.size());
+      assertEquals(tuple(1), out.get(0));
+      assertEquals(tuple(2), out.get(1));
+      assertEquals(tuple(3), out.get(2));
+  }
+
   /**
    * Verify that ASSERT operator works
    * @throws Exception
